adding floors to module and download page

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -448,7 +448,7 @@
   subgroup: 5
 
 - sbSecId: 1
-  title: Floors Module
+  title: Price Floors Module
   link: /dev-docs/modules/floors.html
   isHeader: 0
   isSectionHeader: 0
