added june 2 event

--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,1 +1,4 @@
 #-------------Message----------------
+- messageId: 1
+  messageText: <a href="/prebid/events.html">Register for our virtual meetup on June 2nd&#58; Prebid Product Roadmap</a>
+  messageCreateDt: 05_19_2020
