sovrn added to members

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -223,6 +223,10 @@
   link: https://simplaex.com
   type: community
 
+- company: Sovrn
+  link: https://sovrn.com
+  type: community
+
 - company: Yeahmobi
   link: https://yeahmobi.com
   type: community
