mobilefuse added to members

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -205,6 +205,10 @@
   link: https://media.net
   type: community
 
+- company: MobileFuse
+  link: https://mobilefuse.com/
+  type: community
+
 - company: Parrable
   link: https://parrable.com
   type: community
